assets/scss/custom.scss
@import url("./fira.scss");

$mobile-breakpoint: 1200px;

.dark-theme {
  --background: #060606;
  --text-primary: #fff;
  --text-secondary: #757575;
  --button-bg: #4c72ba;
  --button-hover: #3f64ab;
  --button-disabled: #f0f0f3;
  --button-text: #fff;
  --icon-primary: #fff;
  --icon-secondary: #2c2c2c;
  --content-border: 1px solid #f5f5f527;
  --inverse-background: white;
  --inverse-text: black;
  --transition: color 1s ease, background-color 1s ease, border-color 1s ease;

  --card-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);

  // accordion
  --accordion-header-bg: #1a273f;
  --accordion-header-hover: #2a3559;
  --accordion-content-bg: #111b2e;

  // menu
  --menu-left-bg: #1a1a1a;
  --menu-right-bg: #444444;
}

.light-theme {
  --background: #fff;
  --text-primary: #000;
  --text-secondary: #969696;
  --button-bg: #4c72ba;
  --button-hover: #3f64ab;
  --button-disabled: #f0f0f3;
  --button-text: #fff;
  --icon-primary: #333;
  --icon-secondary: #666;
  --content-border: 1px solid rgb(128 128 128 / 15.8%);
  --inverse-background: #000;
  --inverse-text: #fff;
  --transition: color 1s ease, background-color 1s ease, border-color 1s ease;

  --card-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);

  // accordion
  --accordion-header-bg: #f3f3f3;
  --accordion-header-hover: #e6e8ec;
  --accordion-content-bg: #f3f3f3;

  // menu
  --menu-left-bg: white;
  --menu-right-bg: #e2e2e2;
}

html * {
  font-family: Fira Sans, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.no-transition,
.no-transition * {
  transition: none !important;
}

body {
  transition: var(--transition);
  background-color: var(--background);
  color: var(--text-primary);
}

.content-page {
  padding-top: 74px;

  @media (max-width: $mobile-breakpoint) {
    padding-top: 45px;
  }
}

.logo {
  padding-right: 1.15rem;
  max-width: 180px;

  .logo-white,
  .logo-colour {
    display: none;
    width: 100%;
    max-width: 180px;
    height: auto;
  }

  .light-theme & {
    .logo-white {
      display: none;
    }
    .logo-colour {
      max-width: 185px;
      display: block;
    }
  }

  .dark-theme & {
    .logo-white {
      display: block;
      padding-left: 0.3rem;
    }
    .logo-colour {
      display: none;
    }
  }
}

// More generic styles
hr {
  margin: 2rem 0;
}

ul {
  margin: 1rem 0;
}

ul li {
  font-size: 1rem;
  display: list-item;
  list-style: disc inside;
}

h1 {
  font-weight: 700;
  font-size: 60px;
  line-height: 60px;
  letter-spacing: -0.4px;
}

h2 {
  font-weight: 700;
  font-size: 32px;
  line-height: 40px;
  letter-spacing: -0.16px;
}

h3 {
  font-weight: 700;
  font-size: 28px;
  line-height: 36px;
  letter-spacing: -0.12px;
}

h4 {
  font-weight: 500;
  font-size: 24px;
  line-height: 30px;
  letter-spacing: -0.1px;
}

h5 {
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
  letter-spacing: -0.08px;
}

h6 {
  font-weight: 500;
  font-size: 18px;
  line-height: 26px;
  letter-spacing: -0.04px;
}


p {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

h2,
h3,
h4 {
  margin: 1rem 0 !important;
}

a {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.dark-theme .content-page a {
  color: rgb(178, 178, 228);
}

.light-theme .content-page a {
  color: rgb(44, 79, 143);
}

